--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,14 @@ group = 'com.carrot'
 version = '1.19-hotfix1-S7.1-MC1.12.2'
 description = 'A SignShop-like shop plugin for Sponge'
 
+repositories {
+    maven{
+        url 'http://repo.drnaylor.co.uk/artifactory/list/minecraft'
+    }
+}
+
 dependencies {
+    compile 'io.github.nucleuspowered:nucleus-api:1.9.0-S7.1'
     compile 'org.spongepowered:spongeapi:7.1.0'
     compile 'com.google.code.gson:gson:2.8.1'
 }
