--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    compile fileTree(dir: 'libraries', include: '*.jar')
     compile 'io.github.nucleuspowered:nucleus-api:1.9.0-S7.1'
     compile 'org.spongepowered:spongeapi:7.1.0'
     compile 'com.google.code.gson:gson:2.8.1'
